--- a/enjoytrip_spring_BE/pom.xml
+++ b/enjoytrip_spring_BE/pom.xml
@@ -93,6 +93,13 @@
 		<!-- swagger를 위한 의존성 추가 -->
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
 		
+		<!-- JWT -->
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 
 	</dependencies>
 
