--- a/enjoy_trip_FE/package.json
+++ b/enjoy_trip_FE/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-plugin-persistedstate": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
