--- a/enjoy_trip_FE/package.json
+++ b/enjoy_trip_FE/package.json
@@ -22,7 +22,7 @@
     "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-plugin-persistedstate": "^1.0.6"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
