--- a/enjoy_trip_FE/package.json
+++ b/enjoy_trip_FE/package.json
@@ -18,8 +18,10 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "moment-timezone": "^0.5.39",
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
