--- a/enjoy_trip_FE/package.json
+++ b/enjoy_trip_FE/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "mdbvue": "^6.7.3",
     "moment-timezone": "^0.5.39",
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
