--- a/enjoy_trip_FE/package.json
+++ b/enjoy_trip_FE/package.json
@@ -21,7 +21,9 @@
     "jwt-decode": "^3.1.2",
     "mdbvue": "^6.7.3",
     "moment-timezone": "^0.5.39",
+    "swiper": "^5.4.5",
     "vue": "^2.7.14",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.5.2",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
