--- a/enjoytrip_spring_BE/src/main/resources/application.properties
+++ b/enjoytrip_spring_BE/src/main/resources/application.properties
@@ -41,3 +41,12 @@ logging.level.com.ssafy=debug
 
 #Failed to start bean 'documentationPluginsBootstrapper'; error
 #spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+# SMTP SETTING
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= rlaehddus815@gmail.com
+spring.mail.password= ofwczuyyprdcusdl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
