--- a/enjoytrip_spring_BE/pom.xml
+++ b/enjoytrip_spring_BE/pom.xml
@@ -100,7 +100,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-
+		
+		<!-- smtp mail -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>2.7.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
